# template_active_inference

./: .codegraph  .gitignore  .pipeline_preserve_output_dirs  .zenodo.json  AGENTS.md  CITATION.cff  ISA.md  README.md  STANDALONE.md  TODO.md  codemeta.json  conftest.py  domain_profile.yaml  experiment_plan.yaml  figures.yaml  index.html  manuscript__00_00_sheaf_coverage.html  manuscript__00_abstract.html  manuscript__03_intro_contributions.html  manuscript__08_methods_sheaf.html  manuscript__12_results_si_tmaze.html  manuscript__13_results_invariants.html  manuscript__15_discussion_outlook.html  manuscript__16_appendix_full_sheaf.html  pymdp.yaml  pyproject.toml  tracks.yaml
.agents/: README.md
.omo/: boulder.json
data/: AGENTS.md  README.md  claim_ledger.yaml
docs/: AGENTS.md  README.md  agent_instructions.md  architecture.md  conceptual-foundations.md  quickstart.md  testing_philosophy.md  thermo-nuclear-code-quality-review.md  troubleshooting.md
gnn/: AGENTS.md  README.md  bernoulli_toy.gnn.md  si_tmaze.gnn.md
lean/: AGENTS.md  README.md  TemplateActiveInference.lean  lake-manifest.json  lakefile.lean
manuscript/: 00_00_sheaf_coverage.md  00_abstract.md  02_intro_motivation.md  03_intro_contributions.md  05_methods_analytical.md  06_methods_pymdp.md  07_methods_lean.md  08_methods_sheaf.md  10_results_mi_sweep.md  11_results_free_energy.md  12_results_si_tmaze.md  13_results_invariants.md  15_discussion_outlook.md  16_appendix_full_sheaf.md  17_conclusion.md  AGENTS.md  README.md  SYNTAX.md  config.yaml  config.yaml.example  preamble.md  references.bib
(+551 files in other folders)
